--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <h1>Let's Play Hangman</h1>
 <img src="FinalProjectImages/hangmanEmpty.png">
-
-
+<br>
+<input type="text" id="guessedLetter">
+<input type="button" id="guess" value="Guess">
 </body>
 </html>
