Created my CSS file and linked it to my HTML file

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Final Project</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="scripts.js"></script>
 </head>
 <body>
