Created a function that chose a random word from my array

--- a/main.html
+++ b/main.html
@@ -12,6 +12,6 @@
 <img src="FinalProjectImages/hangmanEmpty.png">
 <br>
 <input type="text" id="guessedLetter">
-<input type="button" id="guess" value="Guess">
+<input type="button" id="guess" onclick="randomWord()" value="Guess">
 </body>
 </html>
