Created functions that made a word full of blanks for the user to guess

--- a/main.html
+++ b/main.html
@@ -11,7 +11,9 @@
 <h1>Let's Play Hangman</h1>
 <img src="FinalProjectImages/hangmanEmpty.png">
 <br>
+<div style="font-size: 50px" id="blankWord" ></div>
+<br>
 <input type="text" id="guessedLetter">
-<input type="button" id="guess" onclick="randomWord()" value="Guess">
+<input type="button" id="guess" onclick="getBlankWord()" value="Guess">
 </body>
 </html>
