Added a button to start a new game

--- a/main.html
+++ b/main.html
@@ -17,5 +17,7 @@
 <input type="button" id="guess" onclick="guessedLetter()" value="Guess">
 <br>
 <div id="errorGuess"></div>
+<br>
+<input type="button" id="newGame" onclick="getBlankWord()" value="New Game">
 </body>
 </html>
