Fixed the onclick of my button to reload the page

--- a/main.html
+++ b/main.html
@@ -18,6 +18,6 @@
 <br>
 <div id="errorGuess"></div>
 <br>
-<input type="button" id="newGame" onclick="getBlankWord()" value="New Game">
+<input type="button" id="newGame" onclick="window.location.reload()" value="New Game">
 </body>
 </html>
