Added text at the bottom saying the page was created by me

--- a/main.html
+++ b/main.html
@@ -19,5 +19,6 @@
 <div id="errorGuess"></div>
 <br>
 <input type="button" id="newGame" onclick="window.location.reload()" value="New Game">
+<div style="position: absolute; bottom: 0; right: 0; width: 100px; ttext-align: right;">Created By Logan Weyrick</div>
 </body>
 </html>
