Changed the background color

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="scripts.js"></script>
 </head>
-<body onload = "getBlankWord()">
+<body onload = "getBlankWord()"; bgcolor="aqua">
 
 <h1>Let's Play Hangman</h1>
 <img src="FinalProjectImages/hangmanEmpty.png"; id="hangPic";>
