Added id's to my divs for later use

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <h1>Let's Play Hangman</h1>
 <img src="FinalProjectImages/hangmanEmpty.png"; id="hangPic";>
 <br>
-<div style="font-size: 50px" id="blankWord" ></div>
+<div id="blank" style="font-size: 50px" id="blankWord" ></div>
 <br>
 <input type="text" id="letter">
 <input type="button" id="guess" onclick="guessedLetter()" value="Guess">
@@ -19,6 +19,6 @@
 <div id="errorGuess"></div>
 <br>
 <input type="button" id="newGame" onclick="window.location.reload()" value="New Game">
-<div style="position: absolute; bottom: 0; right: 0; width: 100px; ttext-align: right;">Created By Logan Weyrick</div>
+<div id="creator" style="position: absolute; bottom: 0; right: 0; width: 100px; text-align: right; ">Created By Logan Weyrick</div>
 </body>
 </html>
